fix css styling
- let's only set `position:absolute` on the graph svgs instead of all
  svgs
- if the breadcrumbs are too long, it should overflow instead of pushing
  the login/out button off the screen

--- a/web/assets/css/svg.less
+++ b/web/assets/css/svg.less
@@ -1,12 +1,12 @@
 @import (reference) "_vars.less";
 
 svg {
-  position: absolute;
   width: 100%;
   height: 100%;
 }
 
 svg.causality-graph {
+  position: absolute;
   .node text {
     font-family: 'Inconsolata';
     letter-spacing: 1pt;
@@ -14,6 +14,7 @@ svg.causality-graph {
 }
 
 svg.pipeline-graph {
+  position: absolute;
   h1 {
     margin: 5px;
     width: 100%;
